[gd_scene load_steps=7 format=2]

[ext_resource path="res://Characters/Characters.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player.gd" type="Script" id=2]
[ext_resource path="res://Weapons/PlayerBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Spritesheet.png" type="Texture" id=4]
[ext_resource path="res://Walking.tres" type="Animation" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13.0104, 19.6733 )

[node name="Player" instance=ExtResource( 1 )]

position = Vector2( 0.71199, 0.639025 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )
_sections_unfolded = [ "Collision" ]
Bullet = ExtResource( 3 )
speed = 150
weapon_cooldown = 0.3
max_health = 10
starting_health = null

[node name="Body" parent="." index="0"]

texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 11, 80, 26, 40 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Walking = ExtResource( 5 )
blend_times = [  ]

[node name="Weapon" parent="." index="1"]

texture = ExtResource( 4 )
offset = Vector2( 15, 5 )
region_enabled = true
region_rect = Rect2( 22, 16, 6, 5 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Muzzle" parent="Weapon" index="0"]

position = Vector2( 20, 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" parent="." index="2"]

position = Vector2( -0.0568596, 0.00623472 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="RollTime" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="RollCooldown" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false

[node name="Camera2D" type="Camera2D" parent="." index="6"]

position = Vector2( -0.0852581, 0.328298 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="timeout" from="RollTime" to="." method="_on_RollTime_timeout"]


